@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6855 2004/08/12 20:38:35 minskim Exp $
+$NetBSD: CHANGES,v 1.6856 2004/08/12 22:57:00 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3803,3 +3803,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated pkgse to 0.2 [wiz 2004-08-12]
 	Updated getmail to 4.0.10 [schmonz 2004-08-12]
 	Updated cvsync to 0.24.16nb1 [minskim 2004-08-12]
+	Updated opera7 to 7.54 [jdolecek 2004-08-13]
